{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 31,
  "lineage": "2aa5373f-2f36-0189-e34e-4a6cb899278a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw_Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004619892480:internet-gateway/igw-01dd3403dfaf47bb5",
            "id": "igw-01dd3403dfaf47bb5",
            "owner_id": "004619892480",
            "region": "us-east-1",
            "tags": {
              "Name": "Igw_Terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "Igw_Terra",
              "Service": "Terraform"
            },
            "vpc_id": "vpc-0cde40764623d1561"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Vpc_Terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004619892480:route-table/rtb-019ac2a306b44cac3",
            "id": "rtb-019ac2a306b44cac3",
            "owner_id": "004619892480",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01dd3403dfaf47bb5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_Terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "RT_Terra",
              "Service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cde40764623d1561"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "004619892480",
            "id": "rtb-019ac2a306b44cac3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.Igw_Terra",
            "aws_vpc.Vpc_Terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_route_table_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0550f8b0cb17263c4",
            "region": "us-east-1",
            "route_table_id": "rtb-019ac2a306b44cac3",
            "subnet_id": "subnet-06da403bc7d984226"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Igw_Terra",
            "aws_route_table.RT_Terra",
            "aws_subnet.Public_Subnet_Terra",
            "aws_vpc.Vpc_Terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004619892480:security-group/sg-0e283a94f10f452fc",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e283a94f10f452fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "004619892480",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "Security_Terra",
              "Service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cde40764623d1561"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "004619892480",
            "id": "sg-0e283a94f10f452fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Vpc_Terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet_Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004619892480:subnet/subnet-06da403bc7d984226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06da403bc7d984226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "004619892480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Subnet_Terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "Subnet_Terra",
              "Service": "Terraform"
            },
            "vpc_id": "vpc-0cde40764623d1561"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "004619892480",
            "id": "subnet-06da403bc7d984226",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Vpc_Terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Vpc_Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004619892480:vpc/vpc-0cde40764623d1561",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0196e4ae7cbb4b371",
            "default_route_table_id": "rtb-0c86ac2f14671a580",
            "default_security_group_id": "sg-00a94fc5aa9eefb36",
            "dhcp_options_id": "dopt-01e9597be2f2b1310",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cde40764623d1561",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c86ac2f14671a580",
            "owner_id": "004619892480",
            "region": "us-east-1",
            "tags": {
              "Name": "Vpc-Terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "Vpc-Terra",
              "Service": "Terraform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "004619892480",
            "id": "vpc-0cde40764623d1561",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}